--- a/index.css
+++ b/index.css
@@ -1,3 +1,46 @@
-#heading{
-    color: red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 100px;
+}
+
+.nav > ul{
+    display: flex;
+    font-size: 20px;
+}
+
+.nav > ul > li{
+    padding: 10px;
+    margin: 10px;
+    list-style-type: none;
+}
+
+.res-card{
+    width: 200px;
+    height: 300px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.search{
+    padding: 10px;
+}
+
+.res-logo{
+    width: 100%;
+    height: 50%;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
 }
